force-app/main/default/objects/Evaluacion__c/Evaluacion__c.object-meta.xml
<CustomObject>
    <label>Evaluacion</label>
    <nameField>
        <displayFormat>EV# {00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>