force-app/main/default/objects/Evaluacion__c/fields/Alumno__c.field-meta.xml
<CustomField>
    <fullName>Alumno__c</fullName>
    <formula>Boletin__r.Alumno__r.Nombre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alumno</label>
    <type>Text</type>
</CustomField>