force-app/main/default/objects/Evaluacion__c/fields/Boletin__c.field-meta.xml
<CustomField>
    <fullName>Boletin__c</fullName>
    <label>Boletin</label>
    <referenceTo>Boletin__c</referenceTo>
    <relationshipLabel>Evaluaciones</relationshipLabel>
    <relationshipName>Evaluaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>