force-app/main/default/objects/Evaluacion__c/fields/Conceptual1__c.field-meta.xml
<CustomField>
    <fullName>Conceptual1__c</fullName>
    <label>Conceptual1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>