force-app/main/default/objects/Evaluacion__c/fields/Conceptual2__c.field-meta.xml
<CustomField>
    <fullName>Conceptual2__c</fullName>
    <label>Conceptual2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>