force-app/main/default/objects/Evaluacion__c/fields/Conceptual3__c.field-meta.xml
<CustomField>
    <fullName>Conceptual3__c</fullName>
    <label>Conceptual3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>