force-app/main/default/objects/Evaluacion__c/fields/Grilla__c.field-meta.xml
<CustomField>
    <fullName>Grilla__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grilla de Materias</label>
    <referenceTo>Grilla__c</referenceTo>
    <relationshipLabel>Evaluaciones</relationshipLabel>
    <relationshipName>Evaluaciones</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>