force-app/main/default/objects/Evaluacion__c/fields/Materia__c.field-meta.xml
<CustomField>
    <fullName>Materia__c</fullName>
    <formula>Grilla__r.Materia__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Materia</label>
    <type>Text</type>
</CustomField>