force-app/main/default/objects/Evaluacion__c/fields/Nota1__c.field-meta.xml
<CustomField>
    <fullName>Nota1__c</fullName>
    <label>Nota1</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>