force-app/main/default/objects/Evaluacion__c/fields/Nota2__c.field-meta.xml
<CustomField>
    <fullName>Nota2__c</fullName>
    <label>Nota2</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>