force-app/main/default/objects/Evaluacion__c/fields/Nota3__c.field-meta.xml
<CustomField>
    <fullName>Nota3__c</fullName>
    <label>Nota3</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>