force-app/main/default/objects/Evaluacion__c/fields/Opcion1__c.field-meta.xml
<CustomField>
    <fullName>Opcion1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opcion1</label>
    <referenceTo>TipoEvaluacionOpcion__c</referenceTo>
    <relationshipLabel>Evaluaciones</relationshipLabel>
    <relationshipName>Evaluaciones</relationshipName>
    <type>Lookup</type>
</CustomField>