force-app/main/default/objects/Evaluacion__c/fields/Opcion2__c.field-meta.xml
<CustomField>
    <fullName>Opcion2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opcion2</label>
    <referenceTo>TipoEvaluacionOpcion__c</referenceTo>
    <relationshipLabel>Evaluaciones (Opcion2)</relationshipLabel>
    <relationshipName>Evaluaciones1</relationshipName>
    <type>Lookup</type>
</CustomField>