force-app/main/default/objects/Evaluacion__c/fields/Opcion3__c.field-meta.xml
<CustomField>
    <fullName>Opcion3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opcion3</label>
    <referenceTo>TipoEvaluacionOpcion__c</referenceTo>
    <relationshipLabel>Evaluaciones (Opcion3)</relationshipLabel>
    <relationshipName>Evaluaciones3</relationshipName>
    <type>Lookup</type>
</CustomField>